--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,31 @@ header {
     margin-bottom: 20px;
 }
 
+.card {
+    position: relative;
+
+    display: block;
+
+    margin-bottom: 20px;
+    padding: 24px;
+
+    border-radius: 2px;
+    background: #bcc0c0;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+
+.location {
+    /*font-size: x-large;*/
+}
+
+.weather-icon {
+    background-color: #bcc0c0;
+}
+
+.temperature {
+    font-size: larger;
+}
+
 footer {
     margin-top: 30px;
     text-align: center;
