--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,12 +13,8 @@ header {
     padding: 24px;
 
     border-radius: 2px;
-    background: #bcc0c0;
+    background: linear-gradient(310deg, rgb(20, 23, 39), rgb(58, 65, 111));
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-}
-
-.location {
-    /*font-size: x-large;*/
 }
 
 .weather-icon {
