--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,11 @@ header {
     margin-bottom: 20px;
 }
 
-.card {
+.cardwrapper {
     position: relative;
+
+    overflow:auto;
+    white-space: nowrap;
 
     display: block;
 
