--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,10 @@ footer {
     margin-top: 30px;
     text-align: center;
 }
+
+.closeIcon {
+    position: relative;
+    left: 190px;
+    top: -30px;
+    color: #cacaca;
+}
