--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,7 @@
     scroll-margin-left: 30px;
     scroll-snap-stop: always;
     min-width: 320px;
+    cursor: pointer;
 }
 
 .compass-container {
@@ -77,4 +78,39 @@ footer {
 
 input {
     padding: 10px !important;
+}
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    padding-top: 150px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+  
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 800px;
+    height: 600px;
+}
+  
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
