--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,18 @@
     min-width: 320px;
 }
 
+.about {
+    position: relative;
+    display: block;
+    margin-top: 8px;
+    margin-bottom: 20px;
+    padding: 24px;
+    border-radius: 2px;
+    background: #bcc0c0;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    font-size: large;
+}
+
 .compass-container {
     position: relative;
 }
@@ -87,9 +99,9 @@ input {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
-  
+
 .modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -99,14 +111,14 @@ input {
     width: 800px;
     height: 600px;
 }
-  
+
 .close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
-  
+
 .close:hover,
 .close:focus {
     color: #000;
