--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 .cardwrapper {
     scroll-snap-type: x mandatory;
+    position: relative;
     margin-top: 8px;
     scroll-behavior: smooth;
     position: relative;
@@ -10,6 +11,7 @@
     padding: 24px;
     background: linear-gradient(310deg, rgb(20, 23, 39), rgb(58, 65, 111));
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    min-height: 550px;
 }
 
 .cardwrapper::-webkit-scrollbar {
@@ -131,4 +133,44 @@ input {
     margin-top: 8px;
     margin-bottom: 20px;
     padding: 24px;
+}
+
+.add-location-icon-wrapper {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 50px;
+    height: 50px;
+}
+
+.add-location-icon {
+    position: fixed;
+    background-color: white;
+    border: 3px solid rgb(58, 65, 111); 
+    border-radius: 50px;
+    background: rgb(58, 65, 111);
+}
+
+.search-field-wrapper {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 250px;
+    height: 50px;
+}
+
+.loading-bar {
+    width: 100%;
+    height: 0;
+    margin: auto;
+}
+
+.logo {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    left: 0;
+    width: 150px;
+    height: 150px;
+    opacity: 1;
 }
