--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,7 +92,7 @@ input {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-.modal-content {
+.modal .modal-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
